﻿- Clear camera flags before rendering preview thumbnails.


Version 2.0.1

-  Tweak Harmony 2.0 installing and patching.


Version 2.0

- Process overhaul: load and apply RICO settings before game prefab initialisation by patching BuildingInfo.InitializePrefab(), instead of modifying post-initialisation
- Implement growables
- Add experimental live updating of RICO building settings
- Add button to access RICO settings directly from building info panels
- Update residential building household counts on load
- Standardise building display names and avoid non-unique names for prefabs
- Overhaul building AIs, implementing separate (inheriting) AIs for growables and ploppables
- Change settings panel filter toggle button behaviour to match common standards
- Generate standardised building preview images for thumbnail sprites
- Building preview (thumbnails and settings panel) overlays include name, level and size
- Replace default game tooltips with smaller ones with only relevant info
- Allow 'none' as valid UI catgegory, and explicitly default to that if no valid UI category can be found or guessed
- Remove error for zero workplaces for dummy service
- Default local settings are now drawn from the prefab (where possible)
- Fix automatic workplace allocation sometimes not correctly identifying current level in options editor
- Fix 'Leisure' and 'Tourism' tooltips being swapped around
- Add update notification
- Standardise lighting for builiding preview renders
- Migrate to Harmony 2
- Remove redundant CalculateHomeCount Harmony patch
- Overhaul mod conflict checking mechanism and reporting
- Code cleanup


Version 1.3

- Add override for building levels on game load (only applies to buildings in LocalRICOSettings.xml)
- Add building list 'filter by settings' function
- Suppress errors for buildings that are deactivated
- Tweak settings window layout and widen options panel
- Tweak options panel level menu update on service and subservice changes
- Logging tweaks

