@@ -1,4 +1,5 @@
-﻿- Clear camera flags before rendering preview thumbnails.
+﻿- Delete building button when local settings are removed and no other settings remain.
+- Clear camera flags before rendering preview thumbnails.
 
 
 Version 2.0.1
